--- a/static/css/main.css
+++ b/static/css/main.css
@@ -4,6 +4,7 @@ html {
     padding: 0;
     background: url("../img/background1.jpg") fixed;
     background-size: cover;
+    color: #CFC9BD;
 }
 
 img,
@@ -47,7 +48,7 @@ video {
 
 .site-navigation {
     grid-area: hamburger;
-    color: #CFC9BD;
+    /*color: #CFC9BD;*/
 }
 
 #menu {
@@ -126,11 +127,61 @@ video {
 .proj-container {
     border: 1px solid rgba(54, 49, 39, .8);
     background-color: rgba(54, 49, 39, .8);
-    margin: 8%;
+    margin: 6%;
+    display: grid;
+    grid-template: 41% 13% 13% 13% / 100%;
+    grid-template-areas: "image"
+                         "title"
+                         "highlight"
+                         "text"
+                         "button";
+    padding: 15px;
 }
 
 .project-1 {
     grid-area: project-1;
+    /*padding: 10px;*/
+}
+
+.proj-img {
+    grid-area: image;
+    justify-self: center;
+
+}
+
+.proj-heading {
+    grid-area: title;
+}
+
+.proj-highlight {
+    grid-area: highlight;
+}
+
+.proj-text {
+    grid-area: text;
+}
+
+.button {
+    grid-area: button;
+    border: 1px solid black;
+    border-radius: 20px;
+    justify-self: center;
+    background-color: rgba(207, 201, 189, 1);
+    box-shadow: 2px 3px 11px rgba(3, 2, 0, 0.72);
+    font-size: 1.5rem;
+    color: rgba(0, 0, 0, .8);
+    margin: 10px;
+    padding: 8px 15px;
+    outline: none;
+}
+
+.button:hover {
+    background-color: rgba(233, 211, 95, .5);
+}
+
+.button:active {
+    background-color: rgba(106, 118, 131, .5);
+    color: #fff;
 }
 
 .project-2 {
@@ -150,9 +201,13 @@ video {
     grid-area: project-3;
 }
 
+.title-highlight {
+    color: orange;
+}
 .project-4 {
     grid-area: project-4;
 }
+
 
 /* Footer */
 .footer {
