--- a/static/css/responsive.css
+++ b/static/css/responsive.css
@@ -6,6 +6,10 @@
                              "logo skills hamburger";
     }
 
+    .logo {
+        width: 75px;
+    }
+
     .site-name {
         font-size: 2rem;
     }
@@ -33,11 +37,7 @@
         grid-template-areas: "image title"
                              "image highlight"
                              "image text"
-                             ". button";
-    }
-
-    .proj-img {
-        /*margin: inherit;*/
+                             "button text";
     }
 
     .proj-heading {
@@ -45,7 +45,7 @@
     }
 
     .proj-highlight {
-        justify-self: left;
+        justify-self: center;
         padding: 0  1.2rem;
     }
 
@@ -54,8 +54,31 @@
         padding: 0  1.2rem;
     }
 
-    .blog-button {
+    .blog-heading {
+        margin-bottom: 0;
+    }
+
+    .blog-highlight {
         justify-self: center;
+        padding: 0  1.2rem;
+    }
+
+    .blog-text {
+        justify-self: left;
+        padding: 0  1.2rem;
+    }
+
+    .button {
+        justify-self: stretch;
+        margin: 20px 0 7px;
+    }
+
+    .blog-button {
+        padding: 0;
+    }
+
+    .header-menu {
+        padding: 2rem;
     }
 }
 
@@ -84,7 +107,7 @@
         background-color: rgba(54, 49, 39, .8);
         margin: 9% 6%;
         display: grid;
-        grid-template: 41% 13% 13% 13% / 50% 50%;
+        grid-template: 30% 20% 35% 15% / 50% 50%;
         grid-template-areas: "image title"
                              "highlight highlight"
                              "text text"
@@ -100,13 +123,15 @@
     .site-name {
         justify-self: self-end;
         /*padding: 0 20px;*/
-        font-size: 3rem;
+        font-size: 2.5rem;
+        margin: 10px 10px 3px;
     }
 
     .skills {
         justify-self: self-end;
         /*padding: 0 20px;*/
-        font-size: 2rem;
+        font-size: 1.7rem;
+        margin: 0 10px;
     }
 
     .header-menu {
