--- a/static/css/responsive.css
+++ b/static/css/responsive.css
@@ -1,5 +1,11 @@
 /* media-query for iPad (768 x 1024) */
 @media screen and (min-width: 767px) {
+
+    body,
+    html {
+        background: url("../img/background-1300px.jpg") fixed;
+    }
+
     .site-header {
         grid-template: 30% 55% 15% / 20% 60% 20%;
         grid-template-areas: "logo name hamburger"
@@ -89,6 +95,12 @@
 
 /* media-query for iPad Pro (1024 x 1366)*/
 @media screen and (min-width: 1023px) {
+
+    body,
+    html {
+        background: url("../img/background-1800px.jpg") fixed;
+    }
+
     .main-container {
         grid-template: 10% repeat(5, 16%) 10% / 60% 40%;
         grid-template-areas: "header header"
