--- a/static/css/main.css
+++ b/static/css/main.css
@@ -187,9 +187,20 @@ video {
 }
 
 .nav a:hover {
+    background-color: rgb(76, 98, 122);
+    box-shadow: 2px 2px 5px rgba(3, 2, 0, 0.64);
+    border-radius: 20px;
+    padding: 8px 15px;
     text-decoration: underline;
-    color: #CFC9BD;
+    color: rgb(232, 228, 221);
 }
+
+.nav a:active {
+    background-color: rgba(106, 118, 131, .5);
+    color: rgb(224, 160, 116);
+    box-shadow: none;
+}
+
 
 .nav.open {
     transform: translate(0, 0);
