--- a/static/css/responsive.css
+++ b/static/css/responsive.css
@@ -197,3 +197,10 @@
     }
 
 }
+
+@media screen and (min-width: 1400px) {
+    .main-container {
+        padding-right: 2rem;
+        padding-left: 2rem;
+    }
+}
